--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -42,8 +42,8 @@ jobs:
       with:
 
         // Remember the secrets we embedded? this is how we access them
-        aws-access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
         // Replace the values here with your names you submitted in one of 
         // The previous sections
@@ -54,4 +54,4 @@ jobs:
         // Of doing this.
         version_label: 12348
         region: "us-east-2"
-        deployment_package: deploy.zip        
+        deployment_package: deploy.zip
